--- a/index.qmd
+++ b/index.qmd
@@ -19,6 +19,7 @@ library(maps)
 library(leaps)
 library(dplyr)
 library(scales)
+library(olsrr)
 ```
 
 ```{r}
@@ -329,672 +330,17 @@ merged_data_2018 <- merged_data_2018 |>
   mutate(reading_level = as.numeric(reading_level)
          ) 
 
-maximum_regression_model <- linear_reg() |>
-  fit(
-    reading_level ~ 
+maximum_regression_model <- lm(reading_level ~ 
       family_poverty + 
       percentage_single_mother + 
       average_center_child_care + 
       average_family_child_care + 
       one_parent_households + 
       ratio_of_one_to_both, 
-    data = merged_data_2018
-    )
+    data = merged_data_2018)
 
-regression_model_1 <- linear_reg() |> 
-  fit(reading_level ~ family_poverty, data = merged_data_2018)
-```
+ols_step_forward_p(maximum_regression_model)
 
-```{r}
-#| label: creating-all-regression-models
-
-regression_model_1 <- lm(
-  reading_level ~ 
-    family_poverty, 
-  data = merged_data_2018
-  )
-
-regression_model_2 <- lm(
-  reading_level ~ 
-    percentage_single_mother, 
-  data = merged_data_2018
-  )
-
-regression_model_3 <- lm(
-  reading_level ~ 
-    average_center_child_care, 
-  data = merged_data_2018
-  )
-
-regression_model_4 <- lm(
-  reading_level ~ 
-    average_family_child_care, 
-  data = merged_data_2018
-  )
-
-regression_model_5 <- lm(
-  reading_level ~ 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_6 <- lm(
-  reading_level ~ 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_7 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother, 
-  data = merged_data_2018
-  )
-
-regression_model_8 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    average_center_child_care, 
-  data = merged_data_2018
-  )
-
-regression_model_9 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    average_family_child_care, 
-  data = merged_data_2018
-  )
-
-regression_model_10 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_11 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_12 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    average_center_child_care, 
-  data = merged_data_2018
-  )
-
-regression_model_13 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    average_family_child_care, 
-  data = merged_data_2018
-  )
-
-regression_model_14 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_15 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_16 <- lm(
-  reading_level ~ 
-    average_center_child_care + 
-    average_family_child_care, 
-  data = merged_data_2018
-  )
-
-regression_model_17 <- lm(
-  reading_level ~ 
-    average_center_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_18 <- lm(
-  reading_level ~ 
-    average_center_child_care + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_19 <- lm(
-  reading_level ~ 
-    average_family_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_20 <- lm(
-  reading_level ~ 
-    average_family_child_care + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_21 <- lm(
-  reading_level ~ 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_22 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    average_center_child_care, 
-  data = merged_data_2018
-  )
-
-regression_model_23 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    average_family_child_care, 
-  data = merged_data_2018
-  )
-
-regression_model_24 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_25 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_26 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    average_center_child_care + 
-    average_family_child_care, 
-  data = merged_data_2018
-  )
-
-regression_model_27 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    average_center_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_28 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    average_center_child_care + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_29 <- lm(
-  reading_level ~ 
-    family_poverty +
-    average_family_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_30 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    average_family_child_care + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_31 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_32 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    average_center_child_care + 
-    average_family_child_care, 
-  data = merged_data_2018
-  )
-
-regression_model_33 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    average_center_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_34 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    average_center_child_care + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_35 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    average_family_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_36 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    average_family_child_care + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_37 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_38 <- lm(
-  reading_level ~ 
-    average_center_child_care + 
-    average_family_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_39 <- lm(
-  reading_level ~ 
-    average_center_child_care + 
-    average_family_child_care + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_40 <- lm(
-  reading_level ~ 
-    average_center_child_care + 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_41 <- lm(
-  reading_level ~ 
-    average_family_child_care + 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_42 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    average_center_child_care + 
-    average_family_child_care, 
-  data = merged_data_2018
-  )
-
-regression_model_43 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    average_center_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_44 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    average_center_child_care + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_45 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    average_family_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_46 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    average_family_child_care + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_47 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_48 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    average_center_child_care + 
-    average_family_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_49 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    average_center_child_care + 
-    average_family_child_care + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_50 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    average_center_child_care + 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_51 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    average_family_child_care + 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_52 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    average_center_child_care + 
-    average_family_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_53 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    average_center_child_care + 
-    average_family_child_care + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_54 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    average_center_child_care + 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_55 <- lm(
-  reading_level ~ 
-    percentage_single_mother + 
-    average_family_child_care + 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_56 <- lm(
-  reading_level ~ 
-    average_center_child_care + 
-    average_family_child_care + 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_57 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    average_center_child_care + 
-    average_family_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_58 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    average_center_child_care + 
-    average_family_child_care + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_59 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    average_center_child_care + 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-regression_model_60 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    average_family_child_care + 
-    ratio_of_one_to_both + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_61 <- lm(
-  reading_level ~ 
-    family_poverty + 
-    ratio_of_one_to_both + 
-    average_center_child_care + 
-    average_family_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-regression_model_62 <- lm(
-  reading_level ~ 
-    ratio_of_one_to_both + 
-    percentage_single_mother + 
-    average_center_child_care + 
-    average_family_child_care + 
-    one_parent_households, 
-  data = merged_data_2018
-  )
-
-maximum_regression_model <- lm(
-  reading_level ~ 
-    family_poverty + 
-    percentage_single_mother + 
-    average_center_child_care + 
-    average_family_child_care + 
-    one_parent_households + 
-    ratio_of_one_to_both, 
-  data = merged_data_2018
-  )
-
-```
-
-```{r}
-#| label: creating-dataframe-analyzing-model
-
-r_squared <- c(
-  summary(regression_model_1)$adj.r.squared, 
-  summary(regression_model_2)$adj.r.squared, 
-  summary(regression_model_3)$adj.r.squared, 
-  summary(regression_model_4)$adj.r.squared, 
-  summary(regression_model_5)$adj.r.squared, 
-  summary(regression_model_6)$adj.r.squared, 
-  summary(regression_model_7)$adj.r.squared, 
-  summary(regression_model_8)$adj.r.squared, 
-  summary(regression_model_9)$adj.r.squared, 
-  summary(regression_model_10)$adj.r.squared, 
-  summary(regression_model_11)$adj.r.squared, 
-  summary(regression_model_12)$adj.r.squared, 
-  summary(regression_model_13)$adj.r.squared, 
-  summary(regression_model_14)$adj.r.squared, 
-  summary(regression_model_15)$adj.r.squared, 
-  summary(regression_model_16)$adj.r.squared, 
-  summary(regression_model_17)$adj.r.squared, 
-  summary(regression_model_18)$adj.r.squared, 
-  summary(regression_model_19)$adj.r.squared, 
-  summary(regression_model_20)$adj.r.squared, 
-  summary(regression_model_21)$adj.r.squared, 
-  summary(regression_model_22)$adj.r.squared, 
-  summary(regression_model_23)$adj.r.squared, 
-  summary(regression_model_24)$adj.r.squared, 
-  summary(regression_model_25)$adj.r.squared, 
-  summary(regression_model_26)$adj.r.squared, 
-  summary(regression_model_27)$adj.r.squared, 
-  summary(regression_model_28)$adj.r.squared, 
-  summary(regression_model_29)$adj.r.squared, 
-  summary(regression_model_30)$adj.r.squared, 
-  summary(regression_model_31)$adj.r.squared, 
-  summary(regression_model_32)$adj.r.squared,
-  summary(regression_model_33)$adj.r.squared, 
-  summary(regression_model_34)$adj.r.squared, 
-  summary(regression_model_35)$adj.r.squared, 
-  summary(regression_model_36)$adj.r.squared, 
-  summary(regression_model_37)$adj.r.squared, 
-  summary(regression_model_38)$adj.r.squared, 
-  summary(regression_model_39)$adj.r.squared, 
-  summary(regression_model_40)$adj.r.squared, 
-  summary(regression_model_41)$adj.r.squared, 
-  summary(regression_model_42)$adj.r.squared, 
-  summary(regression_model_43)$adj.r.squared, 
-  summary(regression_model_44)$adj.r.squared, 
-  summary(regression_model_45)$adj.r.squared, 
-  summary(regression_model_46)$adj.r.squared, 
-  summary(regression_model_47)$adj.r.squared, 
-  summary(regression_model_48)$adj.r.squared,
-  summary(regression_model_49)$adj.r.squared, 
-  summary(regression_model_50)$adj.r.squared, 
-  summary(regression_model_51)$adj.r.squared, 
-  summary(regression_model_52)$adj.r.squared, 
-  summary(regression_model_53)$adj.r.squared, 
-  summary(regression_model_54)$adj.r.squared, 
-  summary(regression_model_55)$adj.r.squared, 
-  summary(regression_model_56)$adj.r.squared, 
-  summary(regression_model_57)$adj.r.squared, 
-  summary(regression_model_58)$adj.r.squared, 
-  summary(regression_model_59)$adj.r.squared, 
-  summary(regression_model_60)$adj.r.squared, 
-  summary(regression_model_61)$adj.r.squared, 
-  summary(regression_model_62)$adj.r.squared, 
-  summary(maximum_regression_model)$adj.r.squared
-  )
-
-model_name <- c(
-  "regression_model_1",
-  "regression_model_2",
-  "regression_model_3",
-  "regression_model_4",
-  "regression_model_5",
-  "regression_model_6",
-  "regression_model_7",
-  "regression_model_8",
-  "regression_model_9",
-  "regression_model_10",
-  "regression_model_11",
-  "regression_model_12",
-  "regression_model_13",
-  "regression_model_14",
-  "regression_model_15",
-  "regression_model_16",
-  "regression_model_17",
-  "regression_model_18",
-  "regression_model_19",
-  "regression_model_20",
-  "regression_model_21",
-  "regression_model_22",
-  "regression_model_23",
-  "regression_model_24",
-  "regression_model_25",
-  "regression_model_26",
-  "regression_model_27",
-  "regression_model_28",
-  "regression_model_29",
-  "regression_model_30",
-  "regression_model_31",
-  "regression_model_32",
-  "regression_model_33",
-  "regression_model_34",
-  "regression_model_35",
-  "regression_model_36",
-  "regression_model_37",
-  "regression_model_38",
-  "regression_model_39",
-  "regression_model_40",
-  "regression_model_41",
-  "regression_model_42",
-  "regression_model_43",
-  "regression_model_44",
-  "regression_model_45",
-  "regression_model_46",
-  "regression_model_47",
-  "regression_model_48",
-  "regression_model_49",
-  "regression_model_50",
-  "regression_model_51",
-  "regression_model_52",
-  "regression_model_53",
-  "regression_model_54",
-  "regression_model_55",
-  "regression_model_56",
-  "regression_model_57",
-  "regression_model_58",
-  "regression_model_59",
-  "regression_model_60",
-  "regression_model_61",
-  "regression_model_62",
-  "regression_model_63")
-
-final <- data.frame(model_name, r_squared)
-
-final_model <- final |>
-  filter(r_squared == max(r_squared))
 ```
 
 Using reproducible R code, we were able to find the regression model
